# Copyright 2024 Max Planck Institute for Software Systems, and
# National University of Singapore
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
# CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[tool.black]
line-length = 100

[tool.pytype]
inputs = ["simbricks"]
python_version = "3.10"
incremental = true
pythonpath = "../utils:../runtime:../runner:../orchestration:../local:../client:../cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "simbricks-client"
version = "0.4.0"
description = "simbricks client lib to send and retrieve experiments"
authors  = [
  "Team SimBricks <team@simbricks.io>"
]
homepage = "https://www.simbricks.io/"
packages = [
  { include = "simbricks" }
]

[tool.poetry.dependencies]
pytype = "2024.10.11"
aiohttp = "3.9.5"
pydantic-settings = "2.11.0"
httpx = "0.28.1"
attrs = "22.2.0"
python-dateutil = "2.8.0"
opentelemetry-instrumentation-httpx = "0.63b1"
opentelemetry-exporter-otlp-proto-http = "1.42.1"
simbricks-orchestration = ">=0.4.0"
