# Copyright 2024 Max Planck Institute for Software Systems, and
# National University of Singapore
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
# CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[tool.black]
line-length = 100

[tool.pytype]
inputs = ["simbricks"]
python_version = "3.10"
incremental = true
pythonpath = "../utils:../schemas:../runtime:../runner:../orchestration:../local:../client:../cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "simbricks-runner"
version = "0.3.4"
description = "simbricks runner to self host and run simulations via the SimBricks cloud"
authors  = [
  "Team SimBricks <team@simbricks.io>"
]
homepage = "https://www.simbricks.io/"
packages = [
  { include = "simbricks" }
]

[tool.poetry.scripts]
simbricks-runner = "simbricks.runner.main_runner.__main__:main"
simbricks-executor-local = "simbricks.runner.fragment_runner.local.__main__:main"

[tool.poetry.dependencies]
pytype = "2024.10.11"
rich = "13.9.4"
simbricks-orchestration = ">=0.3.3"
simbricks-runtime = ">=0.3.3"
simbricks-client = ">=0.3.3"
