
[tool.black]
line-length = 100

[tool.pytype]
inputs = ["simbricks"]
python_version = "3.10"
incremental = true
pythonpath = "../utils:../runtime:../runner:../orchestration:../local:../client:../cli:../telemetry"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "simbricks-telemetry"
version = "0.4.1"
description = "simbricks telemetry tool for instrumenting and collecting OTEL traces in SimBricks python"
authors  = [
  "Team SimBricks <team@simbricks.io>"
]
homepage = "https://www.simbricks.io/"
packages = [
  { include = "simbricks" }
]

[tool.poetry.dependencies]
pytype = "2024.10.11"
simbricks-client = ">=0.4.1"
